--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,7 @@
 <div class="page">
 
     <div class="page__hero">
-        <div class="page__header">
+        <div class="page__header wow fadeInDown" data-wow-offset="200" data-wow-duration="1s">
             <div class="page__container page__container--lg">
                 <header class="header">
                     <div class="header__nav">
@@ -99,16 +99,16 @@
         <div class="hero">
             <div class="hero__container">
                 <div class="hero__box">
-                    <h1 class="hero__h1">
+                    <h1 class="hero__h1 wow fadeInLeft" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                         Wize<b>Box</b>
                     </h1>
-                    <h2 class="hero__h2">
+                    <h2 class="hero__h2 wow fadeInLeft" data-wow-delay="1s"  data-wow-duration="0.5s">
                         Cyber<span class="hero__pipe">|</span>shield
                     </h2>
-                    <div class="hero__subtitle">
+                    <div class="hero__subtitle wow fadeInLeft" data-wow-delay="1.5s"  data-wow-duration="0.5s">
                         the future of INTELliGENCE AND SECURITY
                     </div>
-                    <div class="hero__count-down">
+                    <div class="hero__count-down wow fadeInLeft" data-wow-delay="2s"  data-wow-duration="0.5s">
                         <div>TOKEN SALE BEGINS:  APRIL 7, 2018</div>
                         <div id="getting-started"></div>
                     </div>
@@ -126,11 +126,11 @@
         <div class="page__container">
 
             <div class="about-section">
-                <h2 class="about-section__title">
+                <h2 class="about-section__title wow fadeInUp">
                     Wizeb<b>bit</b> Vision
                 </h2>
                 <div class="about-section__content">
-                    <div class="about-section__text">
+                    <div class="about-section__text wow fadeInUp">
                         <p class="about-section__p">
                             WizeBit is a blockchain technology company that specializes in software, hardware and AI. As part of our services we are developing a community-driven marketplace providing applications, technologies and content that will reward, create and expand the first Personal Assistant on blockchain.  
                         </p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="wow fadeInUp">
                     <h2 class="about-section__title">
                         <b>privacy</b> matters
                     </h2>
@@ -167,7 +167,7 @@
         <div class="page__container">
 
             <div class="feature-section">
-                <div class="feature-section__items">
+                <div class="feature-section__items wow fadeInUp" data-wow-delay="0s" data-wow-duration="0.5s">
                     <div class="feature-section__top">
                         <i class="feature-section__icon feature-section__icon--security"></i>
                     </div>
@@ -175,7 +175,7 @@
                         Cybersecurity
                     </div>
                 </div>
-                <div class="feature-section__items">
+                <div class="feature-section__items wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="0.5s">
                     <div class="feature-section__top">
                         <i class="feature-section__icon feature-section__icon--guard"></i>
                     </div>
@@ -183,7 +183,7 @@
                         Privacy guardian  
                     </div>
                 </div>
-                <div class="feature-section__items">
+                <div class="feature-section__items wow fadeInUp" data-wow-delay="1s" data-wow-duration="0.5s">
                     <div class="feature-section__top">
                         <i class="feature-section__icon feature-section__icon--source"></i>
                     </div>
@@ -202,10 +202,10 @@
             <div class="description-section">
 
                 <div class="description-section__text">
-                    <h2 class="description-section__title">
+                    <h2 class="description-section__title wow fadeInUp">
                         wize<span>box</span>  
                     </h2>
-                    <div class="description-section__subtitle">
+                    <div class="description-section__subtitle wow fadeInUp">
                         featuRes
                     </div>
                     <ul class="description-section__list">
@@ -216,7 +216,9 @@
                             <div class="description-section__desc">
                                 Three step recognition: detection, faceprint creation and verification. Algorithms analyze the size and shape of the eyes, nose and other features, while a structured light that captures the faces in three dimensions adds to the security
                             </div>
-                            <div class="description-section__line"></div>
+                            <div class="description-section__line wow fadeInRight"
+                                 data-wow-delay="0.25s"
+                                 data-wow-duration="0.5"></div>
                         </li>
                         <li class="description-section__item">
                             <h3 class="description-section__h3">
@@ -225,7 +227,9 @@
                             <div class="description-section__desc">
                                 An encrypted voice print is the first level of access—the speaker’s unique vocal identifier is stored in a decentralized database, similar to processes for fingerprint retrieval.
                             </div>
-                            <div class="description-section__line"></div>
+                            <div class="description-section__line wow fadeInRight"
+                                 data-wow-delay="0.25s"
+                                 data-wow-duration="0.5"></div>
                         </li>
                         <li class="description-section__item">
                             <h3 class="description-section__h3">
@@ -234,7 +238,9 @@
                             <div class="description-section__desc">
                                 WizeBit’s public-private authentication mechanism provides dynamic credentialing in a no-trust environment. The decentralized database API produces a one-time public key to match with the individual’s private key. Once confirmed it acts as a factor in the authentication process.
                             </div>
-                            <div class="description-section__line"></div>
+                            <div class="description-section__line wow fadeInRight"
+                                 data-wow-delay="0.25s"
+                                 data-wow-duration="0.5"></div>
                         </li>
                         <li class="description-section__item">
                             <h3 class="description-section__h3">
@@ -243,7 +249,8 @@
                             <div class="description-section__desc">
                                 Memorized segment of image, video or track is retrieved from blockchain storage and unlocked . This additional level of authentication is unique to industry standards creating innovation previously unknown on the blockchain.
                             </div>
-                            <div class="description-section__line"></div>
+                            <div class="description-section__line wow fadeInRight" data-wow-delay="0.25s"
+                                 data-wow-duration="0.5"></div>
                         </li>
                         <li class="description-section__item">
                             <h3 class="description-section__h3">
@@ -267,10 +274,10 @@
     <section class="page__security" data-scroll-to="save">
         <div class="page__container">
 
-            <div class="security-section">
+            <div class="security-section wow fadeIn" data-wow-delay="0" data-wow-duration="0.5s">
 
                 <div class="security-section__block">
-                    <div class="security-section__inner">
+                    <div class="security-section__inner wow fadeIn" data-wow-delay="0.5s" data-wow-duration="0.5s">
                         <h2 class="security-section__top">
                             is  your home safe?
                         </h2>
@@ -297,19 +304,19 @@
         </div>
     </section>
 
-    <section class="page__spec" data-scroll-to="spec">
+    <section class="page__spec" id="particles-js" data-scroll-to="spec">
         <div class="page__container">
 
             <div class="spec-section">
 
-                <h2 class="spec-section__title">
+                <h2 class="spec-section__title wow fadeInUp">
                     WIZE<b>box</b> sPECS 
                 </h2>
-                <div class="spec-section__subtitle">
+                <div class="spec-section__subtitle wow fadeInUp">
                     Protection for the entire family  
                 </div>
 
-                <div class="spec-section__list">
+                <div class="spec-section__list wow fadeInUp">
 
                     <div class="spec-section__item">
 
@@ -526,13 +533,13 @@
         <div class="page__container">
 
             <div class="community-section">
-                <h2 class="community-section__title">
+                <h2 class="community-section__title wow fadeInUp">
                     community 
                 </h2>
-                <div class="community-section__under-title">
+                <div class="community-section__under-title wow fadeInUp">
                     and ecosystem
                 </div>
-                <div class="community-section__box">
+                <div class="community-section__box wow fadeInUp">
                     <div class="community-section__desc">
                         <p class="community-section__p">
                             WizeBit’s ecosystem will enable all innovative ideas to see the light of day through Community Consensus. The WizeBit platform will allow any community member to submit an innovative idea at any time. The community either upvotes or downvotes the suggested idea. Downvoting insulates the community against impractical ideas, while upvoting accepts and rewards constructive suggestions.
@@ -562,10 +569,10 @@
         <div class="page__container">
 
             <div class="token-section">
-                <h2 class="token-section__title">
+                <h2 class="token-section__title wow fadeInUp">
                     wize<b>token</b>
                 </h2>
-                <div class="token-section__box">
+                <div class="token-section__box wow fadeInUp">
                     <div class="token-section__text">
                         <p class="token-section__p">
                             <span class="token-section__b">SYMBOL =</span>
@@ -654,17 +661,17 @@
             <div class="development-section">
 
                 <div class="development-section__title">
-                    <h2 class="development-section__name">
+                    <h2 class="development-section__name wow fadeInUp">
                         development <b>stages</b>
                     </h2>
-                    <div class="development-section__subtitle">
+                    <div class="development-section__subtitle wow fadeInUp">
                         WIZEbit Development start date Aug 2017
                     </div>
                 </div>
 
                 <div class="development-section__info">
 
-                    <ul class="development-section__list">
+                    <ul class="development-section__list wow fadeInUp">
                         <li class="development-section__item">
                             <div class="development-section__sublist">
                                 <div class="development-section__subitem">WizeBit Blockchain (Alpha) </div>
@@ -777,13 +784,13 @@
 
             <div class="team-section">
 
-                <h2 class="team-section__title">
+                <h2 class="team-section__title wow fadeInUp">
                     Team
                 </h2>
 
                 <div class="team-section__list">
 
-                    <div class="team-section__item">
+                    <div class="team-section__item wow fadeInUp" data-wow-delay="0.25s">
                         <div class="team-section__inside">
                             <div class="team-section__photo">
                                 <img src="{{root}}assets/img/dev-1.jpg" alt="" class="team-section__img">
@@ -801,7 +808,7 @@
 
                     </div>
 
-                    <div class="team-section__item">
+                    <div class="team-section__item wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-section__inside">
                             <div class="team-section__photo">
                                 <img src="{{root}}assets/img/dev-2.jpg" alt="" class="team-section__img">
@@ -817,7 +824,7 @@
 
                     </div>
 
-                    <div class="team-section__item">
+                    <div class="team-section__item wow fadeInUp" data-wow-delay="0.75s">
                         <div class="team-section__inside">
                             <div class="team-section__photo">
                                 <img src="{{root}}assets/img/dev-3.jpg" alt="" class="team-section__img">
@@ -833,7 +840,7 @@
 
                     </div>
 
-                    <div class="team-section__item">
+                    <div class="team-section__item wow fadeInUp" data-wow-delay="1s">
                         <div class="team-section__inside">
                             <div class="team-section__photo">
                                 <img src="{{root}}assets/img/dev-4.jpg" alt="" class="team-section__img">
